[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/polyphemus/eye.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/3/poly.gd" type="Script" id=3]
[ext_resource path="res://entities/polyphemus/hand.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 20 )

[node name="giant_creature" type="Node2D"]
position = Vector2( 256, 204 )
z_as_relative = false
script = ExtResource( 3 )

[node name="left_eye" parent="." instance=ExtResource( 2 )]
position = Vector2( -16, -12 )
z_index = -10

[node name="right_eye" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, -12 )
z_index = -10

[node name="hand" parent="." instance=ExtResource( 4 )]
position = Vector2( -20, 16 )

[node name="vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]
